--- a/ui/src/scss/app.scss
+++ b/ui/src/scss/app.scss
@@ -6,7 +6,7 @@
 
 html, body {
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
     padding: 0;
     margin: 0;
     background-color: var(--base-bg);
@@ -17,10 +17,28 @@ html, body {
     font-size: 16px;
 
     #root {
+        display: block;;
         height: 100%;
+        width: 100%;
+
+        .shadow {
+            box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px 0px;
+        }
 
         .App {
             height: 100%;
+            display: flex;
+            flex-direction: column;
+
+            header {
+                height: 3rem;
+                padding: 0 0.5rem;
+            }
+            
+            main {
+                flex: 1;
+                padding: 1rem 0.5rem;
+            }
         }
     }
 }
