--- a/ui/src/components/TodoItem/todoItem.scss
+++ b/ui/src/components/TodoItem/todoItem.scss
@@ -1,6 +1,11 @@
 .todo-list-item {
     display: flex;
     flex-direction: row;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+    border-radius: 3px;
+    background: rgb(239, 239, 239);
+    border: 1px solid #ccc;
 
     input[type=text] {
         display: none;
@@ -14,13 +19,25 @@
         margin-left: 0.5rem;
     }
 
+    .close {
+        display: none;
+    }
+
     &.editing {
-        span.title {
+
+        .edit {
             display: none;
         }
 
+        .close {
+            display: inline-block;
+        }
+        span.title {
+            display: none !important;
+        }
+
         input[type=text] {
-            display: block;
+            display: block !important;
         }
 
     }
@@ -28,7 +45,7 @@
     &.complete {
         .title {
             text-decoration: line-through;
-            color: greenyellow;
+            color: green;
         }
     }
 
