--- a/ui/src/scss/app.scss
+++ b/ui/src/scss/app.scss
@@ -38,6 +38,12 @@ html, body {
             main {
                 flex: 1;
                 padding: 1rem 0.5rem;
+                
+
+                .container {
+                    max-width: 500px;
+                    margin: 0 auto;
+                }
             }
         }
     }
